Opened 16 years ago
Closed 15 years ago
#2333 closed bug (fixed)
[CDPlayer] if there is no CD drive it should not show main UI after error message (easy)
Reported by: | diver | Owned by: | anevilyak |
---|---|---|---|
Priority: | normal | Milestone: | R1 |
Component: | Applications/CDPlayer | Version: | R1/pre-alpha1 |
Keywords: | Cc: | ||
Blocked By: | Blocking: | ||
Platform: | All |
Description
If you start CDPlayer without having a CD drive (try vmware) CDPlayer shows this error message: "It appears there are no CD drivers on your computer or there is no system software to support one. Sorry." and then it shows main UI for a second before close.
Change History (6)
comment:1 by , 16 years ago
Summary: | [CDPlayer] if there is no CD drive it should not show main UI after error message. → [CDPlayer] if there is no CD drive it should not show main UI after error message (easy) |
---|
comment:2 by , 15 years ago
comment:3 by , 15 years ago
Humdinger, I think you're misreading the description - it talks about the lack of a CDROM drive, not a CDROM disc. The problem is still with us in hrev28815.
comment:4 by , 15 years ago
Owner: | changed from | to
---|
Note:
See TracTickets
for help on using tickets.
This seems to've been fixed meanwhile. I just tried with hrev28814, and CDPlayer opens and says "CD drive is emtpy".