If we're going to fail because of a missing CD drive, never show the CD player window at all instead of flickering it briefly. This fixes ticket #2333.

git-svn-id: file:///srv/svn/repos/haiku/haiku/trunk@28963 a95241bf-73f2-0310-859d-f6bbb57e9c96